# Shot-Boundary-Detection

./: .gitignore  CMakeLists.txt  README.md  gold_standard_statistics.txt  todo
nets/: deploy.prototxt  evaluation_21_only_lstms.txt  evaluation_simple_values  evaluation_two_lstm.txt  make_some_nice_plots.sh  net.prototxt  plot.csv  plot.gnuplot  plot_log.gnuplot  solver.prototxt  train_soft_cuts.sh  training.sh
nets/experiments/one_lstm/: deploy.prototxt  net.prototxt  solver.prototxt
nets/two_lstm/: solver.prototxt
paper/: .gitignore  Makefile  paper.blg  paper.tex  vorlage.tex
paper/.output/: paper.bib
paper/images/: Thumbs.db  evalutation_net.eps  gap_filler.eps  majority_diagonal.eps  merging_strategies.eps  net_architecture.eps  soft_cut_approach.eps  take_first.eps  take_last_frame.eps  take_last_sequence.eps
paper/sections/: 01_introduction.tex  02_related_work.tex  03_hard_cut.tex  04_soft_cut.tex  05_conclusion.tex
paper/sections/hard_cut/: 01_approach.tex  02_visualization.tex  03_evaluation.tex
paper/sections/soft_cut/: 01_data_generation.tex  02_approach.tex  03_evaluation.tex
resources/: differenceHistograms.yaml
resources/d3/: index.html
resources/d3/data/: soft_11_visData.tsv  visData.tsv
resources/d3/js/: main.js
resources/d3/style/: default.css
resources/truth/: ref_anni009.xml  ref_bor03.xml  ref_bor08.xml  ref_bor10.xml  ref_bor12.xml  ref_bor17.xml  ref_nad28.xml  ref_nad31.xml  ref_nad33.xml  ref_nad53.xml  ref_nad57.xml  ref_senses111.xml
resources/truth/test/: test.xml
scripts/: frames_to_file.py  prepareData.py
src/: forwarddeclarations.h  forwarddeclarations.hpp  main.cpp  main.hpp  prepareData.py  svm.cpp  svm.h  truth_reader.cpp  truth_reader.h  util.cpp  util.hpp
src/data_generation/: DataGenerationMain.cpp  DataGenerationMain.hpp  data_generation.cpp  transition_generator.cpp  transition_generator.hpp
src/evaluation/: evaluation.hpp
src/gold_standard/: file_reader.cpp  file_reader.h  file_reader.hpp  gold_standard_element.cpp  gold_standard_element.hpp  gold_standard_statistic.cpp  gold_standard_statistic.hpp
src/hard_cut/: HardCutMain.cpp  HardCutMain.hpp  hardcut_detection.cpp  hardcut_detection.hpp  util.cpp  util.hpp
src/hard_cut/data_generation/: transition_generator.cpp  transition_generator.hpp
src/hard_cut/gold_standard/: file_reader.hpp  gold_standard_element.cpp  gold_standard_element.hpp  gold_standard_statistic.hpp
src/hard_cut/histogram/: histogram.cpp  histogram.hpp
src/hard_cut/svm/: svm.cpp  svm.hpp
src/histogram/: histogram.cpp  histogram.h  histogram.hpp
src/option_printing/: custom_option_description.cpp  custom_option_description.hpp  option_printer.cpp  option_printer.hpp
src/soft_cut/: SoftCutMain.cpp  SoftCutMain.hpp  gap_filler.hpp  softcut_detection.cpp  softcut_detection.hpp
src/soft_cut/classification/: caffe_classifier.cpp  caffe_classifier.hpp  gap_filler.cpp  gap_filler.hpp  merger.cpp  merger.hpp
src/soft_cut/io/: file_reader.cpp  file_reader.hpp  file_writer.cpp  file_writer.hpp
src/svm/: svm.cpp  svm.h  svm.hpp
